--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -46,8 +46,5 @@ jobs:
     - name: Package
       run: dotnet pack --configuration Release
     
-    #- name: Publish
-    #  run: dotnet nuget push B1SA.HanaTranslator\bin\Release\*.nupkg
-
     - name: Publish
-      run: dotnet nuget push **\*.nupkg --skip-duplicate --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_TOKEN }}
+      run: dotnet nuget push **\B1SA.*.nupkg --skip-duplicate --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_TOKEN }}
