--- a/B1SA.HanaTranslator/B1SA.HanaTranslator.csproj
+++ b/B1SA.HanaTranslator/B1SA.HanaTranslator.csproj
@@ -26,7 +26,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Antlr3" Version="3.5.2-rc1" TreatAsUsed="true" NoWarn="NU5104" />
+    <PackageReference Include="Antlr3" Version="3.5.2-rc1" PrivateAssets="all" NoWarn="NU5104" />
   </ItemGroup>
 
   <ItemGroup Label="Antlr">
